# project

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
project/: celery.py  settings.py
web_parser/: admin.py  apps.py  models.py  tasks.py
web_parser/app/: parser.py
web_parser/migrations/: 0001_initial.py
